packages/taquito-michel-codec/test/contracts_015/ill_typed/stack_bottom_undig2able.tz
parameter unit;
storage unit;
code {
       DIG 2;
     }
